fix header z-index

--- a/report-static-assets/components.css
+++ b/report-static-assets/components.css
@@ -14,6 +14,7 @@
 		padding: 10px var(--layout-indent);
 		position: sticky;
 		top: 0;
+		z-index: 2;
 	}
 
 	.layout__header-content {
